Fix styling bug with small played tracks where overlay was covering sibling site

--- a/client/styles/small/_track_played.scss
+++ b/client/styles/small/_track_played.scss
@@ -28,6 +28,7 @@
             padding-top: .5em;
             background: none;
             border: none;
+            z-index: 1;
 
             h3 {
                 color: #444;
@@ -60,7 +61,7 @@
         }
 
         // cover up the heading when scrolled past the last recent track
-        &.active:before {
+        &:before {
             content: '';
             position: relative;
             width: 100%;
